[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"
authors = ["Artemis <me@arty.li>"]

[dependencies]
advent-of-code-ocr = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
pretty_env_logger = "0.4"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "2"
lazy_static = "1"
rustc-hash = "1"
